.archive/cluster/system/oauth2-proxy/templates/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-grocy-securitypolicy
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: grocy
  to:
    - group: ""
      kind: Service
